assets/css/style.css
@charset "UTF-8";

:root {
    --bg-color: #fff;
    --secondary-bg-color: #f7f7f7;
    --heading-color: #5f5f5f;
    --body-color: rgba(0, 0, 0, 0.7);
    --post-color: rgba(0, 0, 0, 0.44);
    --border-color: rgba(0, 0, 0, 0.15);
    --form-border-color: #9f9f9f;
    --form-button-hover-border-color: #000;
    --pre-bg-color: #f9f9fd;
    --nav-text-color: #5a5a5a;
    --tag-color: #424242;
    --blockquote-text-color: #858585;
    --blockquote-border-color: #dfe2e5;
    --hover-color: #66afad;
    --link-color: #8cc3c1;
    --button-hover-color: #eff7f6;
    --thumbnail-height: 15em;
    scroll-padding-top: 100px;
}

html[data-theme='dark'] {
    --bg-color: #292a2d;
    --secondary-bg-color: #323338;
    --heading-color: rgb(169, 169, 179);
    --body-color: rgb(169, 169, 179);
    --post-color: rgba(0, 0, 0, 0.44);
    --border-color: rgb(38, 38, 38);
    --form-border-color: rgb(169, 169, 179);
    --form-button-hover-border-color: #fff;
    --pre-bg-color: rgb(33, 33, 45);
    --nav-text-color: rgb(191, 191, 191);
    --tag-color: rgb(191, 191, 191);
    --blockquote-text-color: #808080;
    --blockquote-border-color: #424242;
    --button-hover-color: #2c3a3d;
}

html {
    background-color: var(--bg-color);
    -webkit-font-smoothing: antialiased;
}

body {
    color: var(--body-color);
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
    font-weight: 300;
    line-height: 1.3em;
    width: 100%;
    margin: 0 auto 30px auto;
    background-color: var(--bg-color);
}

p {
    line-height: 1.6em;
    font-weight: 300;
    font-size: 15px;
}

a {
    text-decoration: none;
}

blockquote {
    padding: 0 1em;
    border-left: .25em solid var(--blockquote-border-color);
    color: var(--blockquote-text-color);
}

.category {
    padding: 4px 6px;
    border-radius: 3px;
    color: var(--tag-color) !important;
    background-color: var(--secondary-bg-color);
    
}

.category:hover {
    background-color: var(--button-hover-color);
}

.tag::before {
    content: "#";
    opacity: .5;
}

.tag,
.category {
    display: inline-block;
    font-size: 15px;
    line-height: 1;
    margin: 5px 8px 5px 0;
}

pre {
    background-color: var(--pre-bg-color);
    padding: 5px;
    display: block;
    overflow-x: auto;
}

.info i {
    opacity: 0.5;
    margin-right: 5px;
}

a:link,
a:visited {
    opacity: 1;
    color: var(--tag-color);
}

a:hover,
a:active {
    color: var(--hover-color);
}

/*basic styles ends*/
/*animation starts*/

.animated {
    transition: top .8s linear;
    -webkit-animation-duration: 1s;
    -moz-animation-duration: 1s;
    -ms-animation-duration: 1s;
    -o-animation-duration: 1s;
    animation-duration: 1s;
}

.animated.hinge {
    -webkit-animation-duration: 1s;
    -moz-animation-duration: 1s;
    -ms-animation-duration: 1s;
    -o-animation-duration: 1s;
    animation-duration: 1s;
}

@-webkit-keyframes fadeInDown {
    0% {
        -webkit-transform: translateY(-20px);
    }

    100% {
        -webkit-transform: translateY(0);
    }
}

@-moz-keyframes fadeInDown {
    0% {
        -moz-transform: translateY(-20px);
    }

    100% {
        -moz-transform: translateY(0);
    }
}

@-o-keyframes fadeInDown {
    0% {
        -o-transform: translateY(-20px);
    }

    100% {
        -o-transform: translateY(0);
    }
}

@keyframes fadeInDown {
    0% {
        transform: translateY(-20px);
    }

    100% {
        transform: translateY(0);
    }
}

.fadeInDown {
    -webkit-animation-name: fadeInDown;
    -moz-animation-name: fadeInDown;
    -o-animation-name: fadeInDown;
    animation-name: fadeInDown;
}

/*animation ends*/
.content {
    height: auto;
    float: right;
    width: 60%;
    margin-top: 60px;
}

.page-top {
    width: 60%;
    position: fixed;
    right: 0;
    z-index: 3;
    background-color: var(--bg-color);
    height: 60px;
    border-bottom: 1px solid var(--border-color);
}

.page-top .nav {
    list-style: none;
    padding: 11px 30px;
    float: left;
    font-size: 13px;
    display: block;
    width: calc(100% - 30px);
}

.page-top .nav li {
    position: relative;
    display: initial;
    padding-right: 20px;
}

.page-top .nav a {
    color: var(--nav-text-color);
}

.page-top .nav a:hover {
    color: var(--hover-color);
}

.page-top .nav a.current {
    color: var(--nav-text-color);
    padding-bottom: 22px;
    border-bottom: 1px solid var(--nav-text-color);
}

.theme-switch-item {
    float: right;
    font-size: 2em;
    margin-top: -5px;
}

.page-top .information {
    float: right;
    padding-top: 13px;
    padding-right: 20px;
}

.page-top .information .avatar {
    float: right;
}

.page-top .information .avatar img {
    width: 32px;
    height: 32px;
    border-radius: 300px;
}

.page-top .information .back_btn {
    float: left;
    padding-top: 5px;
    margin-right: -10px;
}

.page-top .information .back_btn li {
    display: initial;
    padding-right: 40px;
}

.sidebar {
    width: 40%;
    -webkit-background-size: cover;
    background-size: cover;
    background-color: var(--bg-color);
    height: 100%;
    top: 0;
    left: 0;
    position: fixed;
    z-index: 4;
    border-right: 1px solid var(--border-color);
    display: flex;
    flex-direction: column;
    min-height: 100%;
}

.sidebar .logo-title {
    text-align: center;
    padding-top: 240px;
    flex: 1;
}

.sidebar .logo-title .description {
    font-size: 15px;
}

.sidebar .logo-title .logo {
    margin: 0 auto;
}

.sidebar .logo-title .title img {
    width: 127px;
    border-radius: 50%;
}

.sidebar .logo-title .title h3 {
    text-transform: uppercase;
    font-size: 2rem;
    font-weight: 600;
    letter-spacing: 1.9px;
    line-height: 1;
    margin: 1em;
}

.sidebar .logo-title .title a {
    text-decoration: none;
    color: var(--heading-color);
    font-size: 2rem;
    font-weight: 600;
}

.sidebar .social-links {
    list-style: none;
    padding: 0;
    font-size: 15px;
    text-align: center;
    flex: 7;
}
/* ... */

